@@ -1,6 +1,5 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -10,15 +9,16 @@ import uk.gov.hmcts.reform.fpl.enums.RepresentativeRole;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.Representative;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
-import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 
 import java.util.List;
 import java.util.Map;
 
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.EMAIL;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createOthers;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createRespondents;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(RepresentativesController.class)
@@ -39,15 +39,15 @@ class RepresentativeAboutToStartControllerTest extends AbstractControllerTest {
             .servingPreferences(EMAIL)
             .build();
 
-        List<Element<Representative>> representatives = ElementUtils.wrap(representative);
+        List<Element<Representative>> representatives = wrapElements(representative);
 
-        Map<String, Object> incomingCaseDate = ImmutableMap.of(
+        Map<String, Object> incomingCaseDate = Map.of(
             "representatives", representatives,
             "respondents1", createRespondents(),
             "others", createOthers()
         );
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStart(incomingCaseDate);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(incomingCaseDate);
 
         CaseData outgoingCaseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -62,18 +62,18 @@ class RepresentativeAboutToStartControllerTest extends AbstractControllerTest {
 
     @Test
     void shouldPrePopulateRepresentatives() {
-        Map<String, Object> incomingCaseData = ImmutableMap.of();
+        Map<String, Object> incomingCaseData = emptyMap();
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStart(incomingCaseData);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(incomingCaseData);
 
         CaseData outgoingCaseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
         Representative representative = Representative.builder().build();
-        List<Element<Representative>> expectedRepresentatives = ElementUtils.wrap(representative);
 
-        assertThat(outgoingCaseData.getRepresentatives()).isEqualTo(expectedRepresentatives);
-        assertThat(String.valueOf(callbackResponse.getData().get("others_label"))).isEqualTo("No others on the case");
-        assertThat(String.valueOf(callbackResponse.getData().get("respondents_label"))).isEqualTo("No respondents on the case");
+        assertThat(outgoingCaseData.getRepresentatives()).isEqualTo(wrapElements(representative));
+        assertThat(String.valueOf(callbackResponse.getData().get("others_label")))
+            .isEqualTo("No others on the case");
+        assertThat(String.valueOf(callbackResponse.getData().get("respondents_label")))
+            .isEqualTo("No respondents on the case");
     }
-
 }
